--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div class="contenedor">
         <div class="contenedorimg" id="contenedorImg" style="padding-top: 30px;display: flex;justify-content: space-evenly;">
-            <img src="/img1.jpg" alt="" style="height: 257.23px;width: 150px;">
-            <img src="/img2.jpg" alt="" style="height: 257.23px;width: 113.82px;">
+            <img src="/PrimerSanValentin.github.io/img1.jpg" alt="" style="height: 257.23px;width: 150px;">
+            <img src="/PrimerSanValentin.github.io/img2.jpg" alt="" style="height: 257.23px;width: 113.82px;">
         </div>
         <div id="gifOverlay" class="gif-overlay">
             <img src="/Corazones.gif" alt="Corazones" class="gif-img">
@@ -21,7 +21,7 @@
         <button id="yesBtn">Si</button>
         <button id="noBtn">No</button>
         <div class="contenedorimg" id="gifChange" style="padding-top: 30px;display: flex;justify-content: center;">
-            <img src="/Besito.gif" alt="" style="height: 300px;width: 533.34px;">
+            <img src="/PrimerSanValentin.github.io/Besito.gif" alt="" style="height: 300px;width: 533.34px;">
         </div>
     </div>
     <script src="index.js"></script>
