--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="/PrimerSanValentin.github.io/img2.jpg" alt="" style="height: 257.23px;width: 113.82px;">
         </div>
         <div id="gifOverlay" class="gif-overlay">
-            <img src="/Corazones.gif" alt="Corazones" class="gif-img">
+            <img src="/PrimerSanValentin.github.io/Corazones.gif" alt="Corazones" class="gif-img">
         </div>
         <p>¿Quieres ser mi San Valentín?</p>
         <button id="yesBtn">Si</button>
