--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <div class="contenedorimg" id="gifChange" style="padding-top: 30px;display: flex;justify-content: center;">
             <img src="/PrimerSanValentin.github.io/Besito.gif" alt="" style="height: 300px;width: 533.34px;">
         </div>
+        <div class="fecha">
+            <p>Hoy es 07/02/2024 Y es mi primer San Valentín con el amor de mi vida 💕</p>
+        </div>
     </div>
     <script src="index.js"></script>
 
